==> ghi-electronics/TinyCLR-Ports/Targets/STM32F4/STM32F4_USART.cpp <==
#include <algorithm>
#include "STM32F4.h"
#define USART_STOP_BITS_NONE          0
#define USART_STOP_BITS_ONE           1
#define USART_STOP_BITS_TWO           2
#define USART_STOP_BITS_ONEPOINTFIVE  3
#define STM32F4_UART_DATA_BIT_LENGTH_8    8
#define STM32F4_UART_DATA_BIT_LENGTH_9    9

const TinyCLR_Api_Info* STM32F4_Uart_GetApi() {
    for (int i = 0; i < TOTAL_UART_CONTROLLERS; i++) {
        uartProviders[i] = (TinyCLR_Uart_Provider*)(uartProviderDefs + (i * sizeof(TinyCLR_Uart_Provider)));
        uartProviders[i]->Parent = &uartApi;
        uartProviders[i]->Index = i;
        uartProviders[i]->Acquire = &STM32F4_Uart_Acquire;
        uartProviders[i]->Release = &STM32F4_Uart_Release;
        uartProviders[i]->SetActiveSettings = &STM32F4_Uart_SetActiveSettings;
        uartProviders[i]->Flush = &STM32F4_Uart_Flush;
        uartProviders[i]->Read = &STM32F4_Uart_Read;
        uartProviders[i]->Write = &STM32F4_Uart_Write;
        uartProviders[i]->SetPinChangedHandler = &STM32F4_Uart_SetPinChangedHandler;
        uartProviders[i]->SetErrorReceivedHandler = &STM32F4_Uart_SetErrorReceivedHandler;
        uartProviders[i]->SetDataReceivedHandler = &STM32F4_Uart_SetDataReceivedHandler;
        uartProviders[i]->GetBreakSignalState = STM32F4_Uart_GetBreakSignalState;
        uartProviders[i]->SetBreakSignalState = STM32F4_Uart_SetBreakSignalState;
        uartProviders[i]->GetCarrierDetectState = STM32F4_Uart_GetCarrierDetectState;
        uartProviders[i]->GetClearToSendState = STM32F4_Uart_GetClearToSendState;
        uartProviders[i]->GetDataReadyState = STM32F4_Uart_GetDataReadyState;
        uartProviders[i]->GetIsDataTerminalReadyEnabled = STM32F4_Uart_GetIsDataTerminalReadyEnabled;
        uartProviders[i]->SetIsDataTerminalReadyEnabled = STM32F4_Uart_SetIsDataTerminalReadyEnabled;
        uartProviders[i]->GetIsRequestToSendEnabled = STM32F4_Uart_GetIsRequestToSendEnabled;
        uartProviders[i]->SetIsRequestToSendEnabled = STM32F4_Uart_SetIsRequestToSendEnabled;
    }

    uartApi.Author = "GHI Electronics, LLC";
    uartApi.Name = "GHIElectronics.TinyCLR.NativeApis.STM32F4.UartProvider";
    uartApi.Type = TinyCLR_Api_Type::UartProvider;
    uartApi.Version = 0;
    uartApi.Count = TOTAL_UART_CONTROLLERS;
    uartApi.Implementation = uartProviders;

    return &uartApi;
}

TinyCLR_Result STM32F4_Uart_Acquire(const TinyCLR_Uart_Provider* self) {
    int32_t portNum = self->Index;

    if (portNum >= TOTAL_UART_CONTROLLERS)
        return TinyCLR_Result::ArgumentInvalid;

    GLOBAL_LOCK(irq);

    g_UartController[portNum].txBufferCount = 0;
    g_UartController[portNum].txBufferIn = 0;
    g_UartController[portNum].txBufferOut = 0;

    g_UartController[portNum].rxBufferCount = 0;
    g_UartController[portNum].rxBufferIn = 0;
    g_UartController[portNum].rxBufferOut = 0;

    g_UartController[portNum].portPtr = g_STM32F4_Uart_Ports[portNum];
    g_UartController[portNum].provider = self;

    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F4_Uart_SetActiveSettings(const TinyCLR_Uart_Provider* self, uint32_t baudRate, uint32_t dataBits, TinyCLR_Uart_Parity parity, TinyCLR_Uart_StopBitCount stopBits, TinyCLR_Uart_Handshake handshaking) {
    int32_t portNum = self->Index;
    uint32_t clk;

    // enable UART clock
    if (portNum == 5) { // COM6 on APB2
        RCC->APB2ENR |= RCC_APB2ENR_USART6EN;
        clk = SYSTEM_APB2_CLOCK_HZ;
    }
    else if (portNum == 0) { // COM1 on APB2
        RCC->APB2ENR |= RCC_APB2ENR_USART1EN;
        clk = SYSTEM_APB2_CLOCK_HZ;
    }
    else if (portNum < 5) { // COM2-5 on APB1
        RCC->APB1ENR |= RCC_APB1ENR_USART2EN >> 1 << portNum;
        clk = SYSTEM_APB1_CLOCK_HZ;
    }
    else { // COM7-8 on APB1
        RCC->APB1ENR |= RCC_APB1ENR_UART7EN >> 6 << portNum;
        clk = SYSTEM_APB1_CLOCK_HZ;
    }

    //  baudrate
    uint16_t div = (uint16_t)((clk + (baudRate >> 1)) / baudRate); // rounded

    g_UartController[portNum].portPtr->BRR = div;

    // control
    uint16_t ctrl_cr1 = USART_CR1_TE | USART_CR1_RE;

    if (parity != TinyCLR_Uart_Parity::None) {
        ctrl_cr1 |= USART_CR1_PCE;
        dataBits++;
    }

    if (parity == TinyCLR_Uart_Parity::Odd)
        ctrl_cr1 |= USART_CR1_PS;

    if (dataBits == STM32F4_UART_DATA_BIT_LENGTH_9)
        ctrl_cr1 |= USART_CR1_M;
    else {
        if (dataBits != STM32F4_UART_DATA_BIT_LENGTH_8)
            return TinyCLR_Result::ArgumentInvalid;
    }

    g_UartController[portNum].portPtr->CR1 = ctrl_cr1;


    uint32_t stopbit = USART_STOP_BITS_NONE;

    switch (stopBits) {
        case TinyCLR_Uart_StopBitCount::OnePointFive:
            stopbit = USART_STOP_BITS_ONEPOINTFIVE;
            break;

        case TinyCLR_Uart_StopBitCount::Two:
            stopbit = USART_STOP_BITS_TWO;

        case TinyCLR_Uart_StopBitCount::One:
        default:
            break;
    }

    g_UartController[portNum].portPtr->CR2 = (uint16_t)(stopbit << 12);

    uint16_t ctrl_cr3 = 0;

    switch (handshaking) {
        case TinyCLR_Uart_Handshake::RequestToSend:
            ctrl_cr3 = USART_CR3_CTSE | USART_CR3_RTSE;
            break;

        case TinyCLR_Uart_Handshake::XOnXOff:
        case TinyCLR_Uart_Handshake::RequestToSendXOnXOff:
            return TinyCLR_Result::NotSupported;
    }

    g_UartController[portNum].portPtr->CR3 = ctrl_cr3;

    uint32_t alternate = 0x72; // AF7 = USART1-3

    if (portNum >= 3)
        alternate = 0x82; // AF8 = UART4-8

    STM32F4_Gpio_EnableAlternatePin(g_STM32F4_Uart_Rx_Pins[portNum], TinyCLR_Gpio_PinDriveMode::InputPullUp, 0, (uint32_t)alternate);
    STM32F4_Gpio_EnableAlternatePin(g_STM32F4_Uart_Tx_Pins[portNum], TinyCLR_Gpio_PinDriveMode::Input, 1, (uint32_t)alternate);

    if (handshaking == TinyCLR_Uart_Handshake::RequestToSend) {
        STM32F4_Gpio_EnableAlternatePin(g_STM32F4_Uart_Cts_Pins[portNum], TinyCLR_Gpio_PinDriveMode::Input, 0, (uint32_t)alternate);
        STM32F4_Gpio_EnableAlternatePin(g_STM32F4_Uart_Rts_Pins[portNum], TinyCLR_Gpio_PinDriveMode::Input, 1, (uint32_t)alternate);
    }

    switch (portNum) {
        case 0:
            STM32F4_Interrupt_Activate(USART1_IRQn, (uint32_t*)&STM32F4_Uart_Interrupt0, 0);
            break;

        case 1:
            STM32F4_Interrupt_Activate(USART2_IRQn, (uint32_t*)&STM32F4_Uart_Interrupt1, 0);
            break;

        case 2:
            STM32F4_Interrupt_Activate(USART3_IRQn, (uint32_t*)&STM32F4_Uart_Interrupt2, 0);
            break;

        case 3:
            STM32F4_Interrupt_Activate(UART4_IRQn, (uint32_t*)&STM32F4_Uart_Interrupt3, 0);
            break;

        case 4:
            STM32F4_Interrupt_Activate(UART5_IRQn, (uint32_t*)&STM32F4_Uart_Interrupt4, 0);
            break;

        case 5:
            STM32F4_Interrupt_Activate(USART6_IRQn, (uint32_t*)&STM32F4_Uart_Interrupt5, 0);
            break;

            // some SoCS have more UARTs (default is 6 )
#if TOTAL_UART_CONTROLLERS > 6
        case 6:
            STM32F4_Interrupt_Activate(UART7_IRQn, (uint32_t*)&STM32F4_Uart_Interrupt4, 0);
            break;

        case 7:
            STM32F4_Interrupt_Activate(UART8_IRQn, (uint32_t*)&STM32F4_Uart_Interrupt5, 0);
            break;
#endif
    }


    g_UartController[portNum].isOpened = true;

    STM32F4_Uart_TxBufferEmptyInterruptEnable(portNum, true);
    STM32F4_Uart_RxBufferFullInterruptEnable(portNum, true);

    g_UartController[portNum].portPtr->CR1 |= USART_CR1_UE; // start uart

    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F4_Uart_Release(const TinyCLR_Uart_Provider* self) {
    GLOBAL_LOCK(irq);

    int32_t portNum = self->Index;

    g_UartController[portNum].portPtr->CR1 = 0; // stop uart

    switch (portNum) {
        case 0:
            STM32F4_Interrupt_Deactivate(USART1_IRQn);
            break;

        case 1:
            STM32F4_Interrupt_Deactivate(USART2_IRQn);
            break;

        case 2:
            STM32F4_Interrupt_Deactivate(USART3_IRQn);
            break;

        case 3:
            STM32F4_Interrupt_Deactivate(UART4_IRQn);
            break;

        case 4:
            STM32F4_Interrupt_Deactivate(UART5_IRQn);
            break;

        case 5:
            STM32F4_Interrupt_Deactivate(USART6_IRQn);
            break;

            // some SoCS have more UARTs (default is 6 )
#if TOTAL_UART_CONTROLLERS > 6
        case 6:
            STM32F4_Interrupt_Deactivate(UART7_IRQn);
            break;

        case 7:
            STM32F4_Interrupt_Deactivate(UART8_IRQn);
            break;
#endif
    }

    STM32F4_Uart_RxBufferFullInterruptEnable(portNum, false);
    STM32F4_Uart_TxBufferEmptyInterruptEnable(portNum, false);

    // disable UART clock
    if (portNum == 5) { // COM6 on APB2
        RCC->APB2ENR &= ~RCC_APB2ENR_USART6EN;
    }
    else if (portNum == 0) { // COM1 on APB2
        RCC->APB2ENR &= ~RCC_APB2ENR_USART1EN;
    }
    else if (portNum < 5) { // COM2-5 on APB1
        RCC->APB1ENR &= ~(RCC_APB1ENR_USART2EN >> 1 << portNum);
    }
    else { // COM7-8 on APB1
        RCC->APB1ENR &= ~(RCC_APB1ENR_UART7EN >> 6 << portNum);
    }

    g_UartController[portNum].txBufferCount = 0;
    g_UartController[portNum].txBufferIn = 0;
    g_UartController[portNum].txBufferOut = 0;

    g_UartController[portNum].rxBufferCount = 0;
    g_UartController[portNum].rxBufferIn = 0;
    g_UartController[portNum].rxBufferOut = 0;

    g_UartController[portNum].isOpened = false;

    return TinyCLR_Result::Success;
}

void STM32F4_Uart_TxBufferEmptyInterruptEnable(int portNum, bool enable) {
    if (enable) {
        g_UartController[portNum].portPtr->CR1 |= USART_CR1_TXEIE;  // tx int enable
    }
    else {
        g_UartController[portNum].portPtr->CR1 &= ~USART_CR1_TXEIE; // tx int disable
    }
}

void STM32F4_Uart_RxBufferFullInterruptEnable(int portNum, bool enable) {
    if (enable) {
        g_UartController[portNum].portPtr->CR1 |= USART_CR1_RXNEIE;  // rx int enable
    }
    else {
        g_UartController[portNum].portPtr->CR1 &= ~USART_CR1_RXNEIE; // rx int disable
    }
}

TinyCLR_Result STM32F4_Uart_Flush(const TinyCLR_Uart_Provider* self) {
    int32_t portNum = self->Index;

    if (g_UartController[portNum].isOpened == false)
        return TinyCLR_Result::NotAvailable;

    while (g_UartController[portNum].txBufferCount > 0) {
        STM32F4_Time_Delay(nullptr, 1);
    }

    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F4_Uart_Read(const TinyCLR_Uart_Provider* self, uint8_t* buffer, size_t& length) {
    int32_t portNum = self->Index;
    size_t i = 0;;

    GLOBAL_LOCK(irq);

    if (g_UartController[portNum].isOpened == false)
        return TinyCLR_Result::NotAvailable;

    length = std::min(g_UartController[portNum].rxBufferCount, length);

    while (i < length) {
        buffer[i] = g_UartController[portNum].RxBuffer[g_UartController[portNum].rxBufferOut];

        g_UartController[portNum].rxBufferOut++;
        i++;
        g_UartController[portNum].rxBufferCount--;

        if (g_UartController[portNum].rxBufferOut == STM32F4_UART_RX_BUFFER_SIZE)
            g_UartController[portNum].rxBufferOut = 0;
    }

    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F4_Uart_Write(const TinyCLR_Uart_Provider* self, const uint8_t* buffer, size_t& length) {
    int32_t portNum = self->Index;
    int32_t i = 0;

    GLOBAL_LOCK(irq);

    if (g_UartController[portNum].isOpened == false)
        return TinyCLR_Result::NotAvailable;

    length = std::min(STM32F4_UART_TX_BUFFER_SIZE - g_UartController[portNum].txBufferCount, length);

    if (g_UartController[portNum].txBufferCount == STM32F4_UART_TX_BUFFER_SIZE) {
        if (g_UartController[portNum].errorEventHandler != nullptr)
            g_UartController[portNum].errorEventHandler(g_UartController[portNum].provider, TinyCLR_Uart_Error::TransmitFull);

        return TinyCLR_Result::Success;
    }

    while (i < length) {

        g_UartController[portNum].TxBuffer[g_UartController[portNum].txBufferIn] = buffer[i];

        g_UartController[portNum].txBufferCount++;
        i++;
        g_UartController[portNum].txBufferIn++;

        if (g_UartController[portNum].txBufferIn == STM32F4_UART_TX_BUFFER_SIZE)
            g_UartController[portNum].txBufferIn = 0;
    }

    if (length > 0) {
        STM32F4_Uart_TxBufferEmptyInterruptEnable(portNum, true); // Enable Tx to start transfer
    }

    return TinyCLR_Result::Success;
}

void STM32F4_Uart_Reset() {
    for (auto i = 0; i < TOTAL_UART_CONTROLLERS; i++) {
        STM32F4_Uart_Release(uartProviders[i]);
    }
}
